--- a/src/package.json
+++ b/src/package.json
@@ -99,7 +99,7 @@
     "author": "Martin Reinhardt",
     "license": "MIT",
     "bugs": {
-        "url": "+https://github.com/mvargaslandolfi1993/nativescript-urlhandler.git"
+        "url": "https://github.com/mvargaslandolfi1993/nativescript-urlhandler.git"
     },
     "homepage": "https://github.com/hypery2k/nativescript-urlhandler"
 }
